--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.3.0",
     "express": "^4.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1",
